@@ -14,6 +14,7 @@ nymea-plugins-modbus (1.7.017) jammy; urgency=medium
     - speedwireInverter: hybrid inverter support, add battery capacity
   * Siemens PAC2200: Initial Support
   * Kostal: fixed Meter totalEnergyProduced
+  * Victron: fix total PV power
 
  -- Luis Reber <l.reber@consolinno.de> Thu, 28 May 2025 08:49:00 +0200
 
